--- a/app/src/main/res/layout/show_camera.xml
+++ b/app/src/main/res/layout/show_camera.xml
@@ -58,5 +58,14 @@
         android:src="@drawable/rectangle"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="125dp" />
+    <TextView
+        android:id="@+id/txtAltura"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="80dp"
+        android:text=""
+        android:layout_gravity="center_horizontal"
+        android:textColor="#fcfbfb" />
 
 </FrameLayout>
