--- a/app/src/main/res/layout/show_camera.xml
+++ b/app/src/main/res/layout/show_camera.xml
@@ -42,7 +42,6 @@
         android:textColor="#fcfbfb" />
 
 
-
     <TextView
         android:id="@+id/txtAltura"
         android:layout_width="wrap_content"
@@ -51,6 +50,7 @@
         android:layout_marginTop="80dp"
         android:text=""
         android:layout_gravity="center_horizontal"
-        android:textColor="#fcfbfb" />
+        android:textColor="#fcfbfb"
+        android:background="@android:color/holo_blue_light"/>
 
 </FrameLayout>
