--- a/app/src/main/res/layout-v21/show_camera.xml
+++ b/app/src/main/res/layout-v21/show_camera.xml
@@ -52,6 +52,16 @@
         android:layout_gravity="center_horizontal"
         android:textColor="#fcfbfb"
         android:background="@android:color/holo_blue_light"/>
+    <TextView
+        android:id="@+id/txtNomPic"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:text=""
+        android:layout_gravity="center_horizontal"
+        android:textColor="#fcfbfb"
+        android:background="@android:color/holo_blue_light"/>
 
 
 </FrameLayout>
